# DXR

./: .gitignore  CMakeLists.txt  README.md  SESSION_LANES.md  vcpkg.json  vr_gestures.json
Documentation/: 00_ALL_DOCS_BY_DATE.md  00_GRAVITY_JOURNEY_READING_ORDER.md  DXR_VS_DOOMXR_CHANGES.md  DoomXR_Capability_Audit_FULL.txt  DoomXR_Holster_System_Plan.md  DoomXR_Physics_Whip.md  DoomXR_Shader_Tweaks_Proposal.md  DoomXR_VRSword_HandVelocity_Patch_Spec.md  DoomXR_Weapon_Mass_System_DESIGN.md  DoomXR_Whip_Entangle_Yank_Engine_Feature_Report.md  DoomXR_Whip_IQM_Rigging_Patch_Spec.md  DoomXR_Whip_MASTER_PLAN.md  GITD_MAIN_FP_SHADER_FEATURE_MAP.md  GRABMAP_V3_SHOWCASE_SPEC.md  GRAVITY_CUBE_THEORY.md  GRAVITY_ENGINE_JOURNEY.md  GRAVITY_PLAN_AUTOPSY.md  HF_NEON_ARCADE_PLAN.md  LIVE_SPINNING_PORTAL_GET_US_THERE.md  NATIVE_WEAPON_MODEL_FORMAT_SWAP.md  PORTAL_STACKING_ROTATING_CUBES_PLAN.md  PORTAL_WAR_TEAM_BEDROCK.md  PORTAL_WAR_TEAM_VELOCITY.md  PORTAL_WAR_VERDICT.md  RELOAD_JUICE_SPEC.md  SPHERE_BATTLEFIELDS.md  VR_ARSENAL_UI_SUITE.md  VR_GESTURE_ENGINE_INTEGRATION.md  VR_RELOAD_CANON_STATUS.md  VR_RELOAD_SYSTEM_REFERENCE.md  VR_TWOHAND_GRIP_DETERMINISM_SPEC.md  VR_UNIVERSAL_WEAPON_HANDLING_ATTACK_PLAN.md  VR_WEAPON_HANDLING_ENGINE_LEVEL.md  VR_WEAPON_HAND_RULESET.md  WEAPON_IQM_BATCH_BUILDER.md  XR_DEBUG_VISUALIZERS.md  XR_GRAVITY_HANDOFF.md  XR_GRAVITY_PATH_POWER.md  XR_HOST_VS_GUEST_ENGINE_ALTERATIONS.md  XR_INTERACTION_GLOWS_AND_HAND_COLLISION.md  (+3 more)
_UImockup/: 01_radial_wheel.html  02_wrist_slate.html  03_seam_reveal.html  (+3 more)
libraries/giflib/: CMakeLists.txt
src/: d_main.h  (+21 more)
(+607 files in other folders)
